Presumably fix header and footer z-index

--- a/less/cd-custom.less
+++ b/less/cd-custom.less
@@ -24,6 +24,10 @@
   padding: 0px !important;
 }
 
+footer.cd-footer {
+  z-index: 100;
+}
+
 @media screen and (min-width: 768px) {
   #content {
     padding-top: 32px;
