--- a/less/cd-header.less
+++ b/less/cd-header.less
@@ -37,6 +37,10 @@
   border-color:#fff;
 }
 
+header.cd-menu {
+  z-index: 100;
+}
+
 #jQueryCookieDisclaimer {
   padding-top: 2px;
   padding: 0px 2px 0px 2px;
